--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,11 @@ colored = "2.1.0"
 csv = "1.3.1"
 csvlens = "0.10.1"
 dirs = "5.0.1"
+http = "1.1.0"
 inline_colorization = "0.1.6"
 java-properties = "2.0.0"
 lazy_static = "1.5.0"
 regex = "1.11.1"
+reqwest = { version = "0.12.9", features = ["blocking", "json"] }
 serde = { version = "1.0.215", features = ["derive"] }
+serde_json = "1.0.133"
