--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ csv = "1.3.1"
 csvlens = "0.10.1"
 dirs = "5.0.1"
 http = "1.1.0"
+indicatif = "0.17.9"
 inline_colorization = "0.1.6"
 java-properties = "2.0.0"
 lazy_static = "1.5.0"
