--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ indicatif = "0.17.9"
 inline_colorization = "0.1.6"
 java-properties = "2.0.0"
 lazy_static = "1.5.0"
+nanoid = "0.4.0"
 regex = "1.11.1"
 reqwest = { version = "0.12.9", features = ["blocking", "json"] }
 serde = { version = "1.0.215", features = ["derive"] }
